# social-todo

./: .dockerignore  200.html  Cargo.toml  Dockerfile  README.md  index.html
.github/workflows/: build.yml  client.yml  heroku.yml  server.yml
_nuxt/: 08b64ad.js  14a5cbb.js  19f7556.js  1dc7ced.js  280e94d.js  2efebc1.js  3958bd7.js  3f70800.js  4242854.js  464625b.js  4c67266.js  5c707c3.js  6361f52.js  6c0036d.js  791edb1.js  8112485.js  99f224f.js  9a29d5d.js  LICENSES  c93f481.js  d14fc50.js  d3241fd.js
_nuxt/static/1616461069/: state.js
_nuxt/static/1616461941/: manifest.js  state.js
_nuxt/static/1616610224/: manifest.js  payload.js  state.js
_nuxt/static/1616634710/: manifest.js  state.js
_nuxt/static/1616975722/: manifest.js  (+1 more)
client/: .eslintrc.js  README.md  jest.config.js  nuxt.config.js  package.json
client/layouts/: default.vue
client/pages/: index.vue  login.vue
client/plugins/: fetch-hybrid.ts
client/store/: auth.ts  backend.ts  index.ts  users.ts
client/test/: Base.spec.ts
client/utils/: api.ts  store-accessor.ts
login/: index.html
server/: .env  Cargo.toml  README.md  schema.sql
server/migrations/: 20210320211531_create_update_timestamp.up.sql  20210320220037_create_users.down.sql  20210320220037_create_users.up.sql  20210320220934_insert_admin_user.down.sql  20210320220934_insert_admin_user.up.sql
server/src/: api.rs  lib.rs  main.rs  models.rs  test_utils.rs
server/src/api/: v1.rs
server/src/api/v1/: auth.rs  users.rs
server/src/models/: connector.rs  error.rs  user.rs
users/: index.html
users/1/: index.html
(+36 files in other folders)
