[package]
name = "social-todo-server"
version = "0.1.0"
authors = ["Vincent Tavernier <vince.tavernier@gmail.com>"]
edition = "2018"

[dependencies]
actix-files = "0.6.0-beta.3"
actix-rt = "2.1"
actix-session = "0.4"
actix-web = "4.0.0-beta.4"
bcrypt = "0.9"
bincode = "1.3"
chrono = { version = "0.4", features = ["serde"] }
color-eyre = "0.5"
derive_more = "0.99"
dotenv = "0.15"
futures = "0.3"
num_cpus = "1.13"
redis = { version = "0.20", features = ["aio", "tokio-comp"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
sqlx = { version = "0.5", features = ["runtime-actix-native-tls", "postgres", "chrono"] }
structopt = "0.3"
tokio = "1.4"
tracing = "0.1"
tracing-actix-web = "0.3.0-beta.3"
tracing-subscriber = "0.2"
url = "2.2"
